<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SKS-Trainer</string>
    <string name="infoMessage">Diese App enthält die Fragen für die Prüfung des Sportküstenschifferscheines ab 2007</string>
    <string name="selectTopic">Bitte wählen sie ein Kapitel:</string>
    <string name="showAnswerButtonText">Antwort zeigen</string>
    <string name="waitBeforeContinue">Bitte warten Sie etwas bevor Sie weiter lernen …</string>
    <string name="nextQuestionAt">Die nächste Frage sehen Sie um:</string>
    <string name="continueNow">Jetzt weiter machen …</string>
    <string name="restart">Neu beginnen</string>
    <string name="chapterFinished">Sie haben dieses Kapitel erfolgreich abgeschlossen …</string>
    <string name="offeneFragen">Offene Fragen:</string>
    <string name="nextLabel">Nächste: </string>
    <string name="right">Richtig!</string>
    <string name="done">fertig</string>
    <string name="answer">Antwort:</string>
    <string name="answeredCorrect">Richtig</string>
    <string name="answeredIncorrect">Falsch</string>
    <string name="firstPass">Erster Durchgang</string>
    <string name="secondPass">Zweiter Durchgang</string>
    <string name="menuResetTopic">Kapitel neu beginnen</string>
    <string name="menuResetTopicCondensed">Neu beginnen</string>
	<string name="menuStatistics">Statistik</string>
	<string name="menuHelp">Hilfe</string>
	<string name="menuHelpCondensed">Hilfe</string>
	<string name="menuInfo">Info</string>
	<string name="menuInfoCondensed">Prüfungsinfos</string>
    <string name="chapter">Kapitel:</string>
    <string name="totalProgress">Gesamtfortschritt:</string>
    <string name="atLevel0">Ohne richtige Antwort:</string>
    <string name="atLevel1">Ein mal richtig:</string>
    <string name="atLevel2">Zwei mal richtig (fertig):</string>
    <string name="warningReset">Hiermit beginnt die Abfrage dieses Kapitels von vorn.</string>
    <string name="resetOkay">OK</string>
    <string name="resetCancel">Abbrechen</string>
</resources>
