<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
	<LinearLayout android:id="@+id/answerLinearLayout"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:orientation="vertical">

		<ProgressBar
			android:id="@+id/answerProgressBar"
			style="?android:attr/progressBarStyleHorizontal"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" />
		
		<TextView
		    android:id="@+id/answerLevelText"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_gravity="right"
		    android:text=""
		    android:textAppearance="?android:attr/textAppearanceSmall" />
		
		<TextView
		    android:id="@+id/answerTextViewFrage"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="10dp"
		    android:text=""
		    android:textAppearance="?android:attr/textAppearanceMedium" />

		<TextView
		    android:id="@+id/textView2"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="10dp"
		    android:text="@string/answer" />

		<TextView
		    android:id="@+id/answerText"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_gravity="top"
		    android:layout_marginBottom="10dp"
		    android:text=""
		    android:textAppearance="?android:attr/textAppearanceMedium" />

		<LinearLayout
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content" >

		    <Button
		        android:id="@+id/buttonCorrect"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight="0.50"
		        android:text="@string/answeredCorrect" />

		    <Button
		        android:id="@+id/buttonIncorrect"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight="0.50"
		        android:text="@string/answeredIncorrect" />

		</LinearLayout>

	</LinearLayout>
    
</ScrollView>